# personal-graph-agent

./: README.md  docker-compose.yml  main.py  pyproject.toml
database/: Dockerfile  app.py
graph/: const.py  graph.py  state.py  tools.py
graph/chains/: generation.py
graph/chains/test/: test_chain.py
graph/nodes/: agent.py
server/: requirements.txt
server/memory/: Dockerfile  memory_server.py
